# django_pytest

./: Pipfile  README.md  requirements.txt
django_besnard_consulting/: README.md
django_besnard_consulting/branch-1_basic_pytest/film-app-django/: manage.py  pyproject.toml
django_besnard_consulting/branch-1_basic_pytest/film-app-django/film/: apps.py  serializers.py
django_besnard_consulting/branch-1_basic_pytest/film-app-django/film/migrations/: 0001_initial.py
django_besnard_consulting/branch-1_basic_pytest/film-app-django/film/tests/: test_views.py
django_besnard_consulting/branch-1_basic_pytest/film-app-django/producer/: serializers.py
django_testing_tutorial_2018/: .coverage  .coveragerc  README.md  db.sqlite3  manage.py  pytest.ini
django_testing_tutorial_2018/django_testing_tutorial_2018/: asgi.py  settings.py  urls.py  wsgi.py
django_testing_tutorial_2018/htmlcov/: d_0cbdc7893c5f60c5_test_models_py.html  d_0cbdc7893c5f60c5_test_urls_py.html  d_0cbdc7893c5f60c5_test_views_py.html  d_0cbdc7893c5f60c5_test_views_testcase_py.html  d_38de61b5dfe0f77c___init___py.html  d_38de61b5dfe0f77c_admin_py.html  d_38de61b5dfe0f77c_apps_py.html  index.html  status.json  (+7 more)
django_very_academy_faker/: README.md  db.sqlite3
django_very_academy_setup_and_start_testing/: README.md
introduction_to_pytest/: .coverage  README.md
pytest-bdd/: README.md  pytest.ini
pytest-mock/: db.sqlite3
test_automation_university-selenium_webdriver_with_python/: README.md
unit_test_basic/: README.md  db.sqlite3  manage.py  pytest.ini
unit_testing_with_pytest/: README.md
(+104 files in other folders)
